@@ -8,6 +8,7 @@
   been changed to accept the values ~fold~, ~replace~ and ~nil~.
 - Add new customization options ~org-modern-replace-stars~ and
   ~org-modern-fold-stars~.
+- Add ~org-modern-tag-faces~.
 
 * Version 1.2 (2024-03-16)
 
